crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3053_valid_rfc3339_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3053",
    "help": null,
    "labels": [],
    "message": "configured RFC3339 label is not a valid timestamp",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3053",
    "help": null,
    "labels": [],
    "message": "configured RFC3339 label is not a valid timestamp",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  }
]
