crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3054_valid_spdx_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3054",
    "help": null,
    "labels": [],
    "message": "configured SPDX label is not a valid SPDX identifier",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  }
]
