crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3055_valid_git_hash_labels_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1040
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3055",
    "help": null,
    "labels": [],
    "message": "configured git hash label is not a valid git hash",
    "path": "",
    "primary_span": {
      "end_byte": 199,
      "end_column": 50,
      "end_line": 4,
      "start_byte": 150,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RDL3055",
    "help": null,
    "labels": [],
    "message": "configured git hash label is not a valid git hash",
    "path": "",
    "primary_span": {
      "end_byte": 248,
      "end_column": 49,
      "end_line": 5,
      "start_byte": 200,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDL3055",
    "help": null,
    "labels": [],
    "message": "configured git hash label is not a valid git hash",
    "path": "",
    "primary_span": {
      "end_byte": 298,
      "end_column": 50,
      "end_line": 6,
      "start_byte": 249,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  }
]
