crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3057_missing_healthcheck_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3057",
    "help": null,
    "labels": [],
    "message": "HEALTHCHECK instruction is missing",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 16,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 16
    },
    "severity": "warning"
  }
]
