crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3060_yarn_cache_clean_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3060",
    "help": null,
    "labels": [],
    "message": "`yarn cache clean` missing after `yarn install` was run",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "info"
  },
  {
    "code": "RDL3060",
    "help": null,
    "labels": [],
    "message": "`yarn cache clean` missing after `yarn install` was run",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "info"
  }
]
